--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="sidebar" class="overlay">
         <a href="#" class="closebtn" onclick="closemenu()">&times;</a>
         <ul class="overlay-content">
-            <li><a href="#">lorem</a></li>
+            <li><a href="#">ABOUT</a></li>
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
