--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,14 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- css link -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/style.css">
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>Document</title>
 </head>
+
 <body>
 
     <!-- NAVBAR -->
@@ -45,7 +48,7 @@
     <!-- SIDEBAR -->
     <div class="sidebar">
         <ul>
-            <li><a href="#">lorem</a></li>
+            <li><a href="./ourFood.html">Our Food</a></li>
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
             <li><a href="#">lorem</a></li>
@@ -66,7 +69,7 @@
 
     <!-- MAIN -->
     <main>
-        
+
         <h1>Featured Deals</h1>
         <hr>
 
@@ -84,7 +87,7 @@
         <div class="maindeals">
             <div class="content">
                 <section>
-                    <img src="img/etlipizza.webp" alt="">
+                    <img src="./src/img/etlipizza.webp" alt="">
                 </section>
                 <section>
                     <h1>$11.99</h1>
@@ -99,12 +102,12 @@
 
             <div class="content">
                 <section>
-                    <img src="img/gobeleklipizza.jpeg" alt="">
+                    <img src="./src/img/gobeleklipizza.jpeg" alt="">
                 </section>
                 <section>
                     <h1>$24.99</h1>
                     <h3>Gobelekli Pizza</h3>
-                    <p>Bu Pizza sadece  $24.99 - a</p>
+                    <p>Bu Pizza sadece $24.99 - a</p>
                     <div class="button">
                         <section>Bu pizzani al</section>
                         <section>Her ikisini al</section>
@@ -114,7 +117,7 @@
 
             <div class="content">
                 <section>
-                    <img src="img/pendirlipizza.jpeg" alt="">
+                    <img src="./src/img/pendirlipizza.jpeg" alt="">
                 </section>
                 <section>
                     <h1>$31.99</h1>
@@ -129,7 +132,7 @@
 
             <div class="content">
                 <section>
-                    <img src="img/soganlipizza.webp" alt="">
+                    <img src="./src/img/pendirlipizza.jpeg" alt="">
                 </section>
                 <section>
                     <h1>$18.99</h1>
@@ -144,13 +147,12 @@
 
             <div class="content">
                 <section>
-                    <img src="img/sucuklupizza.webp" alt="">
+                    <img src="./src/img/sucuklupizza.webp" alt="">
                 </section>
                 <section>
                     <h1>TWO FOR TUESDAY</h1>
                     <h3>Sucuklu Pizza</h3>
-                    <p>Free small cheese pizza with purchase of any Large or X-large Specialty Pizza
-                        (Code 8018) </p>
+                    <p>Free small cheese pizza with purchase of any Large or X-large Specialty Pizza (Code 8018) </p>
                     <div class="button">
                         <section>Bu pizzani al</section>
                         <section>Her ikisini al</section>
@@ -160,7 +162,7 @@
 
             <div class="content">
                 <section>
-                    <img src="img/toyuqlupizza.jpeg" alt="">
+                    <img src="./src/img/toyuqlupizza.jpeg" alt="">
                 </section>
                 <section>
                     <h1>$10.00</h1>
@@ -175,12 +177,12 @@
 
             <div class="content">
                 <section>
-                    <img src="img/vegeterianpizza.webp" alt="">
+                    <img src="./src/img/vegeterianpizza.webp" alt="">
                 </section>
                 <section>
                     <h1>$17.30</h1>
                     <h3>Vegeterian Pizzasi</h3>
-                    <p>Jumbo Cheese Ravioli  in our own famous marinara. Each order served with a full order of our delicious Cheese Breadsticks.</p>
+                    <p>Jumbo Cheese Ravioli in our own famous marinara. Each order served with a full order of our delicious Cheese Breadsticks.</p>
                     <div class="button">
                         <section>Bu pizzani al</section>
                         <section>Her ikisini al</section>
@@ -190,7 +192,7 @@
 
             <div class="content">
                 <section>
-                    <img src="img/zeytunlupizza.jpeg" alt="">
+                    <img src="./src/img/zeytunlupizza.jpeg" alt="">
                 </section>
                 <section>
                     <h1>$20.99</h1>
@@ -211,14 +213,15 @@
 
 
 
-    <script src="main.js"></script>
+    <script src="./src/js/main.js"></script>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script>
-    AOS.init();
-  </script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
+
 </html>
